Fix extra spacing showing on the bottom of the site.

--- a/src/app/components/shell/body/body.component.styl
+++ b/src/app/components/shell/body/body.component.styl
@@ -6,7 +6,6 @@ gj-shell-body
 
 #shell-body
 	position: relative
-	padding-bottom: ($grid-gutter-width-xs / 2)
 	background-color: transparent
 	transition: transform 450ms $strong-ease-out
 	z-index: $zindex-shell-body
@@ -14,9 +13,6 @@ gj-shell-body
 
 	// Space for the top nav.
 	margin-top: $shell-top-nav-height
-
-	@media $media-sm-up
-		padding-bottom: ($grid-gutter-width / 2)
 
 	// When we are showing a right pane we want to shift the whole body over to reveal the pane.
 	#shell.right-pane-visible &
